alignment fixed

--- a/src/app/modules/people/customer-management/details-customer-status/details-customer-status.component.scss
+++ b/src/app/modules/people/customer-management/details-customer-status/details-customer-status.component.scss
@@ -2,11 +2,16 @@
     @media (max-width: 480px) {
         border-top: 2px dashed #d6d6d6;
         border-bottom: 2px dashed #d6d6d6;
+        margin-left: -16px;
+        margin-right: -16px;
     }
 }
 
 .active-button {
     margin: 1rem 0;
+    @media (max-width: 480px) {
+        margin-right: 16px;
+    }
     .active__main {
         border-radius: 4px;
         border: solid 1px #d6d6d6;
@@ -14,6 +19,14 @@
         @media (min-width: 992px) {
             padding: 6px;
         }
+    }
+}
+
+.cust-status {
+    @media (max-width: 480px) {
+        display: flex;
+        align-items: center;
+        margin-left: 16px;
     }
 }
 
